Fix css layout issues

--- a/examples/basic-app/src/App.css
+++ b/examples/basic-app/src/App.css
@@ -1,13 +1,28 @@
-#root {
-  /* max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center; */
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
+.Public {
+  margin: auto;
+}
+
+.BasicSide * {
+  xcolor: white !important;
+  xbackground-color: rgb(var(--vxg-cb1));
+}
+
+.BasicSide ul {
+  height: 100vh;
+}
+
+.BasicMain {
+  flex: 1;
+  background-color: #eee;
+  overflow-y: auto;
+  padding-top: 4rem;
+}
+
+.Chat {
+  padding-bottom: 40px;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 2em;
 }
 
 .logo {
