--- a/examples/basic-app/src/index.css
+++ b/examples/basic-app/src/index.css
@@ -6,29 +6,16 @@ html {
     --vxg-ct1: 255, 255, 255;
     --vxg-ct2: 162, 207, 250;
     --vxg-ci0: 46, 122, 193;
-
 }
 
-.BasicSide * {
-    xcolor: white !important;
-    xbackground-color: rgb(var(--vxg-cb1));
-
+body {
+    margin: 0px;
 }
 
-
-.BasicSide ul {
+#root {
+    display: flex;
     height: 100vh;
 }
-
-
-.BasicMain {
-    background-color: #f4f6fc !important;
-    height: 100vh;
-    margin: 0;
-    padding-top: 4rem;
-    padding-left: 15rem;
-}
-
 
 .MuiDataGrid-columnHeaderTitle {
     font-weight: bold !important;
